Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1
-
None
-
Windows
Description
The configure does not generate a proper configuration.
Does not detect Fontconfig, NEON and ICU correctly.
To fix this issue, arch detection needs to be happening before configure checks.
https://codereview.qt-project.org/70050
NEON patch here:
https://codereview.qt-project.org/#change,69825
FontConfig:
https://codereview.qt-project.org/#change,70051