Detect architecture before auto detection

Some compile checks may depend on the architecture,
e.g., NEON is only available for ARM, so it makes no
sense to check it for this architecture. Therefore
we need to run the architecture check before we
auto detect settings.

Task-number: QTBUG-34743
Change-Id: I53208d25b0ae0fd93cccc7394307b8ee286576a2
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>

cregit: cad65f2632ab887184f33d9b6ccb4b60fa54f481 https://github.com/qt/qtbase/commit/cad65f2632ab887184f33d9b6ccb4b60fa54f481